package(default_visibility = ["//:__subpackages__"])

BROWSERS = [
    "chrome",
    "edge",
    "firefox",
    "ie",
    "safari",
]

[
    config_setting(
        name = browser,
        testonly = True,
        define_values = {
            "browser": browser,
        },
    )
    for browser in BROWSERS
]

[
    config_setting(
        name = "remote-" + browser,
        testonly = True,
        define_values = {
            "browser": browser,
            "remote": "true",
        },
    )
    for browser in BROWSERS
]
