load("@rules_ruby//ruby:defs.bzl", "rb_library", "rb_test")
load("//common:defs.bzl", "copy_file")

package(default_visibility = ["//:__subpackages__"])

copy_file(
    name = "selenium-server-deploy",
    src = "//java/src/org/openqa/selenium/grid:selenium_server_deploy.jar",
    out = "selenium_server_deploy.jar",
)

rb_library(
    name = "spec_helper",
    srcs = [
        "spec_helper.rb",
        "spec_support.rb",
        ":selenium-server-deploy",
    ] + glob(["spec_support/**/*"]),
    deps = [
        "//rb:bidi",
        "//rb:chrome",
        "//rb:common",
        "//rb:devtools",
        "//rb:edge",
        "//rb:firefox",
        "//rb:ie",
        "//rb:remote",
        "//rb:safari",
    ],
)

[
    rb_test(
        name = file[:-8],
        srcs = [file],
        args = ["rb/spec/integration/selenium/webdriver/" + file],
        main = "@bundle//:bin/rspec",
        tags = ["no-sandbox"],
        deps = [
            ":spec_helper",
            "@bundle",
        ],
    )
    for file in glob(["*_spec.rb"])
]
