load("@rules_ruby//ruby:defs.bzl", "rb_test")
load("//rb/spec/integration:configuration.bzl", "ENV", "TAGS")

[
    rb_test(
        name = file[:-8],
        srcs = [file],
        args = ["rb/spec/integration/selenium/webdriver/edge/" + file],
        env = ENV,
        main = "@bundle//:bin/rspec",
        tags = TAGS,
        deps = [
            "//rb/spec/integration/selenium/webdriver:spec_helper",
            "@bundle",
        ],
    )
    for file in glob(["*_spec.rb"])
]
