load("@rules_ruby//ruby:defs.bzl", "rb_test")

[
    rb_test(
        name = file[:-8],
        srcs = [file],
        args = ["rb/spec/integration/selenium/webdriver/remote/" + file],
        main = "@bundle//:bin/rspec",
        tags = ["no-sandbox"],
        deps = [
            "//rb/spec/integration/selenium/webdriver:spec_helper",
            "@bundle",
        ],
    )
    for file in glob(["*_spec.rb"])
]
