load("@rules_ruby//ruby:defs.bzl", "rb_test")

[
    rb_test(
        name = file[:-8],
        srcs = [file],
        args = ["rb/spec/unit/selenium/webdriver/edge/" + file],
        main = "@bundle//:bin/rspec",
        tags = ["no-sandbox"],
        deps = ["@bundle"],
    )
    for file in glob(["*_spec.rb"])
]
